--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 /*
 COLORS
 teal - #0fb9b1;
@@ -13,6 +12,18 @@ red - #ee5253
 }
 
 body{
+    background-image: url(assets/burger-friends.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin: 0px;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 100vh;
+}
+
+.better-background{
     background-image: url(assets/burger-friends.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
@@ -147,4 +158,13 @@ footer form div{
 .recipe-inputs{
     width: 138px;
     height: 31px;
+}
+
+#saved-section{
+    height: 550px;
+    background-color: rgba(225, 225, 225, .9);
+    margin-top: 100px;
+    margin-left: 75px;
+    margin-right: 75px;
+
 }
